add product page

--- a/profil.html
+++ b/profil.html
@@ -395,7 +395,7 @@
 
   <!-- ======= Footer ======= -->
   <!-- End Footer -->
-  <script src="../static/js/bootstrap.bundle.min.js"></script>
-  <script src="../static/js/base.js"></script>
+  <script src="/static/js/bootstrap.bundle.min.js"></script>
+  <script src="/static/js/base.js"></script>
 </body>
 </html>
