--- a/addingProduct.html
+++ b/addingProduct.html
@@ -139,33 +139,41 @@
                   <label for="inputAddress5" class="form-label">whole sale price</label>
                   <input type="text" class="form-control" id="inputAddres5s" placeholder="">
                 </div>
-                <div class="col-12">
+                <!-- <div class="col-12">
                   <label for="inputAddress2" class="form-label">Address 2</label>
                   <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
                 </div>
                 <div class="col-md-6">
                   <label for="inputCity" class="form-label">City</label>
                   <input type="text" class="form-control" id="inputCity">
-                </div>
+                </div> -->
                 <div class="col-md-4">
-                  <label for="inputState" class="form-label">State</label>
+                  <label for="inputState" class="form-label">Catégorie</label>
                   <select id="inputState" class="form-select">
                     <option selected>Choose...</option>
-                    <option>...</option>
+                    <option>Fruits</option>
+                    <option>Beans</option>
+                    <option>Grain</option>
+                    <option>Legume</option>
+                    <option>Tubers</option>
+                    <option>Dairy</option>
+                    <option>Vegetables</option>
+                    <option>Nuts&Kernel</option>
+                    <option>Animals</option>
                   </select>
                 </div>
-                <div class="col-md-2">
+                <!-- <div class="col-md-2">
                   <label for="inputZip" class="form-label">Zip</label>
                   <input type="text" class="form-control" id="inputZip">
-                </div>
-                <div class="col-12">
+                </div> -->
+                <!-- <div class="col-12">
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="gridCheck">
                     <label class="form-check-label" for="gridCheck">
                       Check me out
                     </label>
                   </div>
-                </div>
+                </div> -->
                 <div class="text-center">
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
