--- a/product.html
+++ b/product.html
@@ -120,7 +120,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <h5 class="card-title">All your products</h5>
-                    <div class="btn btn-primary rounded"><i class="fa-solid fa-plus"></i> add a Product</div>
+                    <div class="btn btn-primary rounded"><i class="fa-solid fa-plus"></i><a class="text-white" href="addingProduct.html">add a Product</a> </div>
                 </div>
 
 
